--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button onclick="startGame('infinite')">Nieskończoność</button>
         <button onclick="startGame(120)">2 minuty</button>
     </div>
-    <canvas id="gameCanvas" width="800" height="500" style="display:none;"></canvas>
+    <canvas id="gameCanvas"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
